appId: ${APP_ID}
---
- longPressOn:
    id: ${TRANSACTION_CARD_ID}
- extendedWaitUntil:
    visible:
      id: 'TransactionContextMenu.EditButton'

- tapOn:
    id: 'TransactionContextMenu.EditButton'
