appId: ${APP_ID}
---
- tapOn:
    id: 'TabBar.Analytics'
- tapOn:
    id: 'TabBar.Analytics'
- extendedWaitUntil:
    visible:
      id: 'AnalyticsPage.Container'
    timeout: 15000
