appId: ${APP_ID}
env:
    CARD_ID: ${CARD_ID}
    DESTINATION_ID: ${DESTINATION_ID}
---
- scrollUntilVisible:
      element:
          id: '${CARD_ID}'
      direction: UP
      speed: 20
      centerElement: true
      waitToSettleTimeoutMs: 1000
      optional: true

- evalScript: ${output.settingsCardVisible = false}
- runFlow:
      when:
          visible:
              id: '${CARD_ID}'
      commands:
          - evalScript: ${output.settingsCardVisible = true}
- runFlow:
      when:
          true: ${!output.settingsCardVisible}
      commands:
          - scrollUntilVisible:
                element:
                    id: '${CARD_ID}'
                direction: DOWN
                speed: 20
                centerElement: true
                waitToSettleTimeoutMs: 1000

- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: '${CARD_ID}'
      timeout: 3000

- tapOn:
      id: '${CARD_ID}'

- waitForAnimationToEnd

- extendedWaitUntil:
      visible:
          id: '${DESTINATION_ID}'
      timeout: 8000
