appId: ${APP_ID}
---
- swipe:
      from:
          id: 'RulesPage.RuleCard.0'
      direction: LEFT
      duration: 300
- waitForAnimationToEnd

- tapOn:
      id: DeletableRow.DeleteButton

- tapOn: Delete
