appId: ${APP_ID}
---
- tapOn:
      id: 'RuleForm.Action.${ACTION_INDEX}.CategorySelector'
- evalScript: ${output.categoryPickerOpened = false}
- runFlow:
      when:
          visible:
              id: 'CategoryPickerBottomSheet.Input'
      commands:
          - evalScript: ${output.categoryPickerOpened = true}
- runFlow:
      when:
          true: ${!output.categoryPickerOpened}
      commands:
          - tapOn:
                id: 'RuleForm.Action.${ACTION_INDEX}.CategorySelector.Value'
          - extendedWaitUntil:
                visible:
                    id: 'CategoryPickerBottomSheet.Input'
                timeout: 5000
