appId: ${APP_ID}
---
- tapOn:
    id: 'RuleForm.Footer.SubmitButton'
- extendedWaitUntil:
    visible: 'Apply to existing transactions?'
    timeout: 10000
- tapOn: 'Apply'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'RulesPage.Page'
    timeout: 10000
- extendedWaitUntil:
    visible: 'Rule applied'
    timeout: 15000
