appId: ${APP_ID}
---
- tapOn:
      id: 'RuleForm.Footer.SubmitButton'
- runFlow:
      when:
          visible: 'Apply to existing transactions?'
      commands:
          - tapOn: 'Skip'
- extendedWaitUntil:
      visible:
          id: 'RulesPage.Page'
      timeout: 10000
