appId: ${APP_ID}
---
- tapOn:
    id: 'TransactionForm.CategorySelector'
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Input'
- tapOn:
    id: 'CategoryPickerBottomSheet.Input'
- inputText: ${CATEGORY_NAME}
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}'
- tapOn:
    id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}'
