appId: ${APP_ID}
env:
    FILE_ROW_ID_MATCH: ${FILE_ROW_ID_MATCH}
    PROVIDER_CONTAINER_ID_MATCH: ${PROVIDER_CONTAINER_ID_MATCH || 'budgie( \\(.*\\))?, Container'}
    FIXTURE_FOLDER_NAME_MATCH: ${FIXTURE_FOLDER_NAME_MATCH || 'E2EFixtures'}
    ON_MY_IPHONE_MATCH: ${ON_MY_IPHONE_MATCH || 'On My iPhone|Auf meinem iPhone'}
---
- runFlow:
      when:
          visible:
              id: 'BackButton'
      commands:
          - tapOn:
                id: 'BackButton'

- runFlow:
      when:
          visible:
              id: 'BackButton'
      commands:
          - tapOn:
                id: 'BackButton'

- runFlow:
      when:
          visible:
              id: 'BackButton'
      commands:
          - tapOn:
                id: 'BackButton'

- tapOn:
      text: '${ON_MY_IPHONE_MATCH}'
- waitForAnimationToEnd

- scrollUntilVisible:
      element:
          id: '${PROVIDER_CONTAINER_ID_MATCH}'
      direction: DOWN
      timeout: 15000
      speed: 20
      visibilityPercentage: 40
      centerElement: true

- tapOn:
      id: '${PROVIDER_CONTAINER_ID_MATCH}'

- scrollUntilVisible:
      element:
          id: '${FIXTURE_FOLDER_NAME_MATCH}, Folder'
      direction: DOWN
      timeout: 15000
      speed: 20
      visibilityPercentage: 40
      centerElement: true

- tapOn:
      id: '${FIXTURE_FOLDER_NAME_MATCH}, Folder'

- scrollUntilVisible:
      element:
          id: '${FILE_ROW_ID_MATCH}'
      direction: DOWN
      timeout: 15000
      speed: 20
      visibilityPercentage: 10
      centerElement: false
      waitToSettleTimeoutMs: 500

- tapOn:
      id: '${FILE_ROW_ID_MATCH}'
