appId: ${APP_ID}
---
- tapOn:
      id: 'AccountPickerBottomSheet.Input'
      waitToSettleTimeoutMs: 500
- inputText: ${ACCOUNT_NAME}
- tapOn: Done
- waitForAnimationToEnd
- extendedWaitUntil:
      visible:
          id: 'AccountPickerBottomSheet.Option.${ACCOUNT_NAME}'
- tapOn:
      id: 'AccountPickerBottomSheet.Option.${ACCOUNT_NAME}'
      retryTapIfNoChange: true
- waitForAnimationToEnd
- extendedWaitUntil:
      notVisible:
          id: 'AccountPickerBottomSheet.Input'
- waitForAnimationToEnd
