appId: ${APP_ID}
env:
    ACCOUNT_OPTION_ID: ${ACCOUNT_OPTION_ID}
---
- scrollUntilVisible:
      element:
          id: ${ACCOUNT_OPTION_ID}
      direction: DOWN
      timeout: 10000
- tapOn:
      id: ${ACCOUNT_OPTION_ID}
      retryTapIfNoChange: true
- waitForAnimationToEnd
- extendedWaitUntil:
      notVisible:
          id: 'AccountPickerBottomSheet.Input'
