appId: ${APP_ID}
---

- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Input'
- tapOn:
    id: 'CategoryPickerBottomSheet.Input'
    waitToSettleTimeoutMs: 500
- inputText: ${CATEGORY_NAME}
- tapOn: Done
- extendedWaitUntil:
    visible:
      id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}.Label'
- waitForAnimationToEnd
- tapOn:
    id: 'CategoryPickerBottomSheet.Card.${CATEGORY_NAME}.Label'
    waitToSettleTimeoutMs: 500
- waitForAnimationToEnd
- extendedWaitUntil:
    notVisible:
      id: 'CategoryPickerBottomSheet.Input'
    timeout: 5000
