appId: ${APP_ID}
---
- extendedWaitUntil:
    visible: 'Convert to Transfer?'
    timeout: 10000
- tapOn:
    text: 'Convert'
    index: 0
- extendedWaitUntil:
    notVisible:
      id: 'ConvertToTransfer.Page'
    timeout: 15000
