appId: ${APP_ID}
---
- waitForAnimationToEnd
- extendedWaitUntil:
      visible: 'Are you sure?'
      timeout: 3000
- tapOn: 'Delete'
- waitForAnimationToEnd
- extendedWaitUntil:
      notVisible: 'Are you sure?'
      timeout: 10000
