appId: ${APP_ID}
env:
    AMOUNT: ${AMOUNT}
    ACCOUNT_NAME: ${ACCOUNT_NAME}
    CATEGORY_NAME: ${CATEGORY_NAME}
    COMMENT: ${COMMENT}
---
- runFlow: ../navigation/navigate-to-transactions.flow.yaml

- runFlow:
      file: open-transaction-form.flow.yaml
      env:
          ACTION_ITEM_ID: 'ActionItem.Expense'
          FORM_TITLE: 'New Expense'

- runFlow:
      file: select-account.flow.yaml
      env:
          ACCOUNT_NAME: ${ACCOUNT_NAME}

- retry:
      maxRetries: 3
      commands:
          - tapOn:
                id: 'TransactionForm.CategorySelector'
          - extendedWaitUntil:
                visible:
                    id: 'CategoryPickerBottomSheet.Input'
                timeout: 3000
- runFlow:
      file: ../shared/select-category-by-search.flow.yaml
      env:
          CATEGORY_NAME: ${CATEGORY_NAME}

- scrollUntilVisible:
      element:
          id: 'TransactionForm.CommentInput'
      direction: DOWN
      centerElement: true

- runFlow:
      file: enter-comment.flow.yaml
      env:
          COMMENT: ${COMMENT}

- extendedWaitUntil:
      visible:
          id: 'TransactionKeypad.Digit.1'
- waitForAnimationToEnd

- runFlow:
      when:
          true: ${AMOUNT == '25'}
      commands:
          - retry:
                maxRetries: 3
                commands:
                    - longPressOn:
                          id: 'TransactionKeypad.Backspace'
                    - tapOn:
                          id: 'TransactionKeypad.Digit.2'
                          retryTapIfNoChange: true
                    - tapOn:
                          id: 'TransactionKeypad.Digit.5'
                          retryTapIfNoChange: true
                    - extendedWaitUntil:
                          visible: '^.* 25$'
                          timeout: 1000

- runFlow:
      when:
          true: ${AMOUNT == '10'}
      commands:
          - retry:
                maxRetries: 3
                commands:
                    - longPressOn:
                          id: 'TransactionKeypad.Backspace'
                    - tapOn:
                          id: 'TransactionKeypad.Digit.1'
                          retryTapIfNoChange: true
                    - tapOn:
                          id: 'TransactionKeypad.Digit.0'
                          retryTapIfNoChange: true
                    - extendedWaitUntil:
                          visible: '^.* 10$'
                          timeout: 1000

- runFlow: submit-transaction-and-wait.flow.yaml
