appId: ${APP_ID}
---
- tapOn:
    id: 'TransactionForm.CommentInput'
    waitToSettleTimeoutMs: 500
- extendedWaitUntil:
    visible:
      id: 'NoteInput.Input'
    timeout: 5000
- tapOn:
    id: 'NoteInput.Input'
- eraseText: 50
- inputText: ${COMMENT}
- tapOn:
    id: 'NoteInput.SubmitButton'
    waitToSettleTimeoutMs: 500
- extendedWaitUntil:
    notVisible:
      id: 'NoteInput.Input'
    timeout: 5000
